tests/machine/x/hs/match_full.hs
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}

module Main where

import Data.List (intercalate, isPrefixOf)
import qualified Data.List as List
import qualified Data.Map as Map
import Data.Maybe (fromMaybe)
import Data.Time.Clock.POSIX (getPOSIXTime)

classify :: Int -> String
classify n = 0

x = 2

label = 0

day = "sun"

mood = 0

ok = True

status = 0

main :: IO ()
main = do
  putStrLn (label)
  putStrLn (mood)
  putStrLn (status)
  putStrLn (classify 0)
  putStrLn (classify 5)
